--- a/index.html
+++ b/index.html
@@ -4,8 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Simple Website</title>
+    <link rel="stylesheet" href="style/style.css">
 </head>
 <body>
-    <h1>My Simple Website</h1>
+    <div>
+        <h1>My Simple Website</h1>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis temporibus dolores placeat. Consectetur repellendus aut dolor distinctio perferendis veritatis tenetur, tempora voluptates modi nulla, corporis minima illo. Velit, minima minus?</p>
+</div>
+    
 </body>
 </html>
