--- a/index.html
+++ b/index.html
@@ -8,7 +8,15 @@
 </head>
 <body>
     <div>
-        <h1>My Simple Website</h1>
+        <h1>My first blog</h1>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis temporibus dolores placeat. Consectetur repellendus aut dolor distinctio perferendis veritatis tenetur, tempora voluptates modi nulla, corporis minima illo. Velit, minima minus?</p>
+</div>
+    <div>
+        <h1>My second blog</h1>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis temporibus dolores placeat. Consectetur repellendus aut dolor distinctio perferendis veritatis tenetur, tempora voluptates modi nulla, corporis minima illo. Velit, minima minus?</p>
+</div>
+    <div>
+        <h1>My third blog</h1>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis temporibus dolores placeat. Consectetur repellendus aut dolor distinctio perferendis veritatis tenetur, tempora voluptates modi nulla, corporis minima illo. Velit, minima minus?</p>
 </div>
     
