--- a/index.html
+++ b/index.html
@@ -19,6 +19,14 @@
         <h1>My third blog</h1>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Officiis temporibus dolores placeat. Consectetur repellendus aut dolor distinctio perferendis veritatis tenetur, tempora voluptates modi nulla, corporis minima illo. Velit, minima minus?</p>
 </div>
+<div>
+    <h3>How to push incremental </h3>
+    <ul>
+        <li>git add .</li>
+        <li>git commit -m"add a meaningful commit message"</li>
+        <li>git push</li>
+    </ul>
+</div>
     
 </body>
 </html>
